--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
      }
 
      #modal{
-      background-image: url(/imp/hinh1.jpg);
+      background-image: url(imp/hinh1.jpg);
       background-color: #fff;
       width: 100%;
       height: 250px;
@@ -184,7 +184,7 @@
     }
 
     #modal2{
-      background-image: url(/imp/hinh1.jpg);
+      background-image: url(imp/hinh1.jpg);
       background-color: #fff;
       width: 100%;
       height: 230px;
