--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <META NAME="Author" CONTENT="">
   <META NAME="Keywords" CONTENT="">
   <META NAME="Description" CONTENT="">
+  <meta property="og:image" content="https://example.com/images/cute-preview.jpg" />
 
 
 
@@ -55,6 +56,7 @@
       font-size: larger;
       font-style: normalnormal;
       font-family: "Dancing Script", serif;
+      transition: opacity 1s ease-in-out;
       animation: animate 1.3s infinite;
       opacity: 0;
     }
@@ -68,6 +70,7 @@
       margin: auto;
       height: 400px;
       width: 400px;
+      transition: opacity 1s ease-in-out;
       animation: animate 1.3s infinite;
       opacity: 0;
     }
@@ -162,15 +165,15 @@
      }
 
      #modal{
-      background-image: url(/imp/hinh1.jpg);
+      background-image: url(imp/hinh1.jpg);
       background-color: #fff;
       width: 100%;
-      height: 250px;
+      height: 280px;
       justify-items: center;
       align-items: center;
       position: relative;
       left: 50%;
-      top: 200px;
+      top: 280px;
       transform: translateX(-50%);
       padding-top: 2px;
       padding-bottom: 10px;
@@ -184,10 +187,10 @@
     }
 
     #modal2{
-      background-image: url(/imp/hinh1.jpg);
+      background-image: url(imp/hinh1.jpg);
       background-color: #fff;
       width: 100%;
-      height: 230px;
+      height: 280px;
       justify-items: center;
       align-items: center;
       position: relative;
@@ -197,7 +200,7 @@
       padding-bottom: 10px;
       border-radius: 5px;
       opacity: 0;
-      top: -42px;
+      top: -12px;
       pointer-events: none;
     }
 
@@ -206,9 +209,10 @@
       pointer-events: all;
     }
 
-    h4{
-      margin-top: 55px;
-    }
+    /* h4{
+      margin-top: 10px;
+    } */
+
     button{
       border: none;
       color: #ddd;
@@ -223,7 +227,33 @@
       background-color: #FF5CA4;
     }
     .btn-Get{
-      margin: 55px;
+      margin: 20px 70px;
+    }
+    .btn-Send{
+      margin-top: 20px;
+    }
+
+    #input{
+      padding: 5px 2px;
+      border-radius: 7px;
+      font-size: 22px;
+      font-family: "Dancing Script", serif;
+      font-optical-sizing: auto;
+      font-weight: 400;
+      font-style: normal;
+      border: none;
+      outline: none;
+      margin-bottom: 2px;
+    }
+
+    span{
+      position: absolute;
+      font-size: 20px;
+      font-family: "Dancing Script", serif;
+      font-optical-sizing: auto;
+      font-weight: 400;
+      font-style: normal;
+      color: red;
     }
 
   </style>
@@ -246,9 +276,13 @@
       </div>
       <div id="modal2">
         <h4>
-          <p>Cám ơn em đã đồng ý!</p>
+          <p>Nhập mật khẩu để mở khoá</p>
       </h4>
-        <button id="get" class="btn-Get"> Bấm vào đây</button>
+        <input type="text" id="Input" placeholder="Nhập mật khẩu..." autocomplete="off">
+        <br>
+        <span id="message"></span>
+        <br>
+        <button id="get" class="btn-Get"> Xác nhận</button>
       </div>
     </div>
     </div>
@@ -505,8 +539,9 @@
     const modal_container = document.getElementById('modal-container');
     const modal1 = document.getElementById('modal');
     const modal2 = document.getElementById('modal2');
-    const data = document.getElementById('data')
-    const heart = document.getElementById('pinkboard')
+    const data = document.getElementById('data');
+    const heart = document.getElementById('pinkboard');
+    const message = document.getElementById('message');
 
     btn_Send.addEventListener('click', ()=> {
       modal1.classList.add('off');
@@ -514,9 +549,20 @@
     });
 
     btn_Get.addEventListener('click', ()=>{
-      modal_container.classList.add('off');
-      data.classList.add('show');
-      heart.classList.add('show');
+      const input = document.getElementById('Input').value.replace(/\s+/g, "").toLowerCase().normalize("NFD").replace(/[\u0300-\u036f]/g, "").replace(/(.)\1+/g, "$1");
+      console.log(input);
+      if(input == "emyeuanh" || input == "emiuanh")
+      {
+        modal_container.classList.add('off');
+        setTimeout(() => {
+          data.classList.add('show');
+          heart.classList.add('show');
+        }, 1000);
+      }
+      else{
+        message.textContent = "Mật khẩu hỏng đúng";
+        document.getElementById('Input').value = "";
+      }
     });
 
 
