--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
         }, 1000);
       }
       else{
-        message.textContent = "Mật khẩu hỏng đúng";
+        message.textContent = "Câu mà anh thích nghe nhất!!";
         document.getElementById('Input').value = "";
       }
     });
