--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
       </div>
       <div id="modal2">
         <h4>
-          <p>Nhập mật khẩu để mở khoá</p>
+          <p>Nhập mật khẩu để mở khóa</p>
       </h4>
         <input type="text" id="Input" placeholder="Nhập mật khẩu..." autocomplete="off">
         <br>
